# timbremetrics

./: MANIFEST.in  README.md  pyproject.toml
examples/: evaluate_cae.py  evaluate_fadtk_models.py  evaluate_jtfs.py  evaluate_mfcc.py  evaluate_mss.py  evaluate_music2latent.py  fadtk_requirements.txt  results.yaml  run.sh
scripts/: plot_leader_board.py  plot_pitch_loudness_length.py  plot_true_dissim.py
timbremetrics/: __init__.py  distances.py  metrics.py  paths.py  pmath.py  utils.py
timbremetrics/true_dissim/: Saitis2020_e2set1_general_dissimilarity_matrix.txt
